create pages the view using twig

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -37,6 +37,8 @@
                 </div>
             </section>
          </div>
+
+    {% include 'footer.hmtl.twig' %}
     </div>
 </body>
 {% endblock %}
