create admin login + account list page -in progress

--- a/templates/delete_request.html.twig
+++ b/templates/delete_request.html.twig
@@ -15,16 +15,10 @@
                 </li>
             </ul>
         </nav>
-        <!-- /.navbar -->
+
         {% include 'admin_sideMenu.html.twig' %}
-        <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
-            <!-- Content Header (Page header) -->
-            <section class="content-header">
-            </section>
-
             <section class="content">
-
                 <!-- Default box -->
                 <div class="card">
                     <div class="card-header">
@@ -72,7 +66,7 @@
                                     <span >26.2.2020</span>
                                 </td>
                                 <td class="project-actions text-right">
-                                    <a class="btn btn-primary btn-sm" href="{{ path('single_post',{id:1}) }}" target="_blank">
+                                    <a class="btn btn-primary btn-sm" href="#" target="_blank">
                                         <i class="fas fa-folder">
                                         </i>
                                         View
