--- a/templates/adminLogin.html.twig
+++ b/templates/adminLogin.html.twig
@@ -8,14 +8,14 @@
     <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="{{ path('home_page') }}"><b>Admin</b>LTE</a>
+            <a href="{{ path('list_delete_posts_request') }}"><b>Admin</b>LTE</a>
         </div>
         <!-- /.login-logo -->
         <div class="card">
             <div class="card-body login-card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
 
-                <form action="{{ path('home_page') }}" method="post">
+                <form action="{{ path('list_delete_posts_request') }}" method="post">
                     <div class="input-group mb-3">
                         <input type="email" class="form-control" placeholder="Email">
                         <div class="input-group-append">
