create single post page -in progress

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -38,7 +38,7 @@
             </section>
          </div>
 
-    {% include 'footer.hmtl.twig' %}
+    {% include 'footer.html.twig' %}
     </div>
 </body>
 {% endblock %}
