--- a/templates/account_list.html.twig
+++ b/templates/account_list.html.twig
@@ -72,7 +72,7 @@
                                 <span>25.10.2020</span>
                             </td>
                             <td class="project-actions text-right">
-                                <a class="btn btn-primary btn-sm" href="{{ path('view_profile',{id: 1}) }}" target="_blank">
+                                <a class="btn btn-primary btn-sm" href="{{ path('account_list') }}" target="_blank">
                                     <i class="fas fa-folder">
                                     </i>
                                     View
