--- a/templates/notifications.html.twig
+++ b/templates/notifications.html.twig
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-        {% include 'footer.hmtl.twig' %}
+        {% include 'footer.html.twig' %}
     </div>
 </body>
 {% endblock %}
